Upgrade client/spark to use Spark 4.0.0-preview1 (#728)
* Fix Spark implicits issue with Delta OSS 4.0

* Revert "Fix Spark implicits issue with Delta OSS 4.0"

This reverts commit 9cd180462aa8fd9e5f245085e34b9fad7c26bf64.

* upgrade spark to 4.0.0-preview1

* fix test

* fix test

* fix test

* fix test

* fix test

---------

Co-authored-by: Sun Cao <sun.cao+data@databricks.com>